# jellyfin-sdk-python

./: .gitignore  README.md  architecture.drawio  build.sh  pydoc-markdown.yaml  pyproject.toml
.github/workflows/: publish.yml
specs/: openapi_10_10.json
src/: .openapi-generator-ignore
src/.openapi-generator/: FILES
src/jellyfin/: __init__.py  api.py  base.py  image.py  items.py  system.py  typing.py  user.py  users.py
src/jellyfin/legacy/: __init__.py
templates/python/: README.mustache  api_client.mustache  api_doc_example.mustache  common_README.mustache  python_doc_auth_partial.mustache  rest.mustache
